# SmartResume

./: .gitignore  .slugignore  Procfile  README.md  pyproject.toml  requirements.txt
resumeCentralPro/: README.md  db.sqlite3  tasks.py
resumeCentralPro/resumeApi/: apps.py  models.py  serializers.py
resumeCentralPro/resumeApi/templates/: add_resume.html
resumeCentralPro/resumeApi/views/: resume.py
resumeCentralPro/resumeCentralPro/: settings.py  urls.py
resumecentral/: README.md
resumecentral/.ruff_cache/0.5.4/: 1473398226404771388  546584008902066130  5563166179421974238  7548434444191526087  8827502362072484910
resumecentral/src/: db.sqlite3  main.py  manage.py  tasks.py
resumecentral/src/api/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py
resumecentral/src/api/forms/: register.py  (+2 more)
resumecentral/src/chroma/: chroma_database.py  database.py  indications.txt
resumecentral/src/config/: settings.py  urls.py
resumecentral/src/controller/: resume_controller.py
resumecentral/src/controllers/: ai.py  ai_enhance.py  ai_search.py  chroma_db.py  chromadb.py  chromadb_controller.py  delete_user.py  fetch.py  resume.py  resume_controller.py  smart_resume_data.py
resumecentral/src/sem_kernel/: file1.py  kernel.py  service_settings.py  services.py
resumecentral/src/staticfiles/: staticfiles.json
src/: README.md  manage.py  tasks.py
src/api/: forms.py  models.py  serializers.py  tests.py  urls.py
src/api/forms/: resume.py
src/api/migrations/: 0001_initial.py  0002_rename_resume_resume_description.py  0003_resume_cv_url_alter_resume_description.py  0004_resume_file_upload.py  0005_alter_resume_file_upload.py
src/api/views/: resume.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/media/: langchain.html
(+85 files in other folders)
